5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1613_1802.log
== TEST (2019-04-01 09:05:41) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
danos=((5*sorteio1)**0.5+pi**3)
total=pontos-danos
print(total)
-- OUTPUT:
166.7576553422004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:05:57) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
danos=((5*sorteio1)**0.5+pi**3)
total=pontos-danos
print(total)
-- EXECUTION TIME:
0.184341
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
166.7576553422004
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
263.5164977446485
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
466.7576553422004
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:07:17) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
dano1=((5*sorteio1)**0.5+pi**3)
dano2=((5*sorteio2)**0.5+pi**3)
danos=dano1+dano2
total=pontos-danos
print(total)
-- OUTPUT:
130.2741530868489
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:07:25) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
dano1=((5*sorteio1)**0.5+pi**3)
dano2=((5*sorteio2)**0.5+pi**3)
danos=dano1+dano2
total=pontos-danos
print(total)
-- EXECUTION TIME:
0.144247
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
130.2741530868489
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
227.03299548929704
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
433.5153106844008
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:04:20) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
dano1=int(((5*sorteio1)**0.5+pi**(sorteio2/3)))
dano2=((5*sorteio2)**0.5+pi**3)
danos=dano1+dano2
total=pontos-danos1
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total=pontos-danos1
NameError: name 'danos1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:04:38) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
dano1=int(((5*sorteio1)**0.5+pi**(sorteio2/3)))
dano2=((5*sorteio2)**0.5+pi**3)
danos=dano1+dano2
total=pontos-danos
print(total)
-- OUTPUT:
151.51649774464852
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:04:56) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
dano1=int(((5*sorteio1)**0.5+pi**(sorteio2/3)))
dano2=((5*sorteio2)**0.5+pi**3)
danos=dano1+dano2
total=pontos-dano1
print(total)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:05:08) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
dano1=int(((5*sorteio1)**0.5+pi**(sorteio2/3)))
dano2=((5*sorteio2)**0.5+pi**3)
danos=dano1+dano2
total=pontos-dano1
print(total)
-- EXECUTION TIME:
0.243391
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:05:43) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
dano1=int(((5*sorteio1)**0.5+pi**(sorteio2/3)))
dano2=((5*sorteio2)**0.5+pi**3)
danos=dano1+dano2
total=pontos-dano1
print(total)
-- EXECUTION TIME:
0.20799
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:05:45) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
dano1=int(((5*sorteio1)**0.5+pi**(sorteio2/3)))
dano2=((5*sorteio2)**0.5+pi**3)
danos=dano1+dano2
total=pontos-dano1
print(total)
-- EXECUTION TIME:
0.258946
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:05:46) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
dano1=int(((5*sorteio1)**0.5+pi**(sorteio2/3)))
dano2=((5*sorteio2)**0.5+pi**3)
danos=dano1+dano2
total=pontos-dano1
print(total)
-- EXECUTION TIME:
0.251059
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:05:46) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
dano1=int(((5*sorteio1)**0.5+pi**(sorteio2/3)))
dano2=((5*sorteio2)**0.5+pi**3)
danos=dano1+dano2
total=pontos-dano1
print(total)
-- EXECUTION TIME:
0.210243
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
497
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:05:46) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
dano1=int(((5*sorteio1)**0.5+pi**(sorteio2/3)))
dano2=((5*sorteio2)**0.5+pi**3)
danos=dano1+dano2
total=pontos-dano1
print(total)
-- EXECUTION TIME:
0.42138
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
285
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
497
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:06:03) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
dano1=int(((5*sorteio1)**0.5+pi**(sorteio2/3)))
dano2=((5*sorteio2)**0.5+pi**3)
danos=dano1+dano2
total=pontos-dano1
print(total)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:06:11) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
dano1=int(((5*sorteio1)**0.5+pi**(sorteio2/3)))
dano2=((5*sorteio2)**0.5+pi**3)
danos=dano1+dano2
total=pontos-dano1
print(total)
-- EXECUTION TIME:
0.181571
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:06:27) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
dano1=int(((5*sorteio1)**0.5+pi**(sorteio2/3)))
dano2=((5*sorteio2)**0.5+pi**3)
danos=dano1+dano2
total=pontos-dano1
print(total)
-- EXECUTION TIME:
0.245347
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:06:28) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
dano1=int(((5*sorteio1)**0.5+pi**(sorteio2/3)))
dano2=((5*sorteio2)**0.5+pi**3)
danos=dano1+dano2
total=pontos-dano1
print(total)
-- EXECUTION TIME:
0.140311
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
497
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:06:28) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
dano1=int(((5*sorteio1)**0.5+pi**(sorteio2/3)))
dano2=((5*sorteio2)**0.5+pi**3)
danos=dano1+dano2
total=pontos-dano1
print(total)
-- EXECUTION TIME:
0.371937
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
285
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:

-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:07:18) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
dano1=int(((5*sorteio1)**0.5+pi**(sorteio2/3)))
dano2=((5*sorteio2)**0.5+pi**3)
danos=dano1+dano2
total=pontos-dano1
print(total)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:07:25) 
-- CODE:
pontos=int(input("pontosinicias"))
sorteio1=int(input("sorteio1"))
sorteio2=int(input("sorteio2"))
from math import*
dano1=int(((5*sorteio1)**0.5+pi**(sorteio2/3)))
dano2=((5*sorteio2)**0.5+pi**3)
danos=dano1+dano2
total=pontos-dano1
print(total)
-- EXECUTION TIME:
0.14203
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
